--- a/site/contrib/modeling/element/107-Corotational Truss Element/index.html
+++ b/site/contrib/modeling/element/107-Corotational Truss Element/index.html
@@ -13259,7 +13259,7 @@ unique element object tag
 <tr class="even">
 <td>
 <p>
-<strong>$iNode $jNode</strong>
+<code class="parameter-table-variable">iNode jNode</code>
 </p>
 </td>
 <td>
