--- a/site/contrib/modeling/element/109-CoupledZeroLength Element/index.html
+++ b/site/contrib/modeling/element/109-CoupledZeroLength Element/index.html
@@ -13249,7 +13249,29 @@ unique element object tag
 <tr class="even">
 <td>
 <p>
-<strong>$iNode <span class="math inline">\(jNode&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;end nodes&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;matTag&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;tags associated with previously-defined UniaxialMaterial&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>dir1 $dir2</strong>
+<code class="parameter-table-variable">iNode jNode</code>
+</p>
+</td>
+<td>
+<p>
+end nodes
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<code class="parameter-table-variable">matTag</code>
+</td>
+<td>
+<p>
+tags associated with previously-defined UniaxialMaterial
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<p>
+<code class="parameter-table-variable">dir1 dir2</code>
 </p>
 </td>
 <td>
