--- a/site/contrib/modeling/element/211-Enhanced Strain Quadrilateral Element/index.html
+++ b/site/contrib/modeling/element/211-Enhanced Strain Quadrilateral Element/index.html
@@ -13249,7 +13249,7 @@ unique element object tag
 <tr class="even">
 <td>
 <p>
-<strong>$iNode $jNode $kNode $lNode</strong>
+<code class="parameter-table-variable">iNode jNode kNode lNode</code>
 </p>
 </td>
 <td>
