--- a/site/contrib/modeling/element/257-Force-Based Beam-Column Element/index.html
+++ b/site/contrib/modeling/element/257-Force-Based Beam-Column Element/index.html
@@ -13237,7 +13237,28 @@ title="wikilink">image:IntegrationTypes.pdf</a> for more details on the availabl
 <tr class="odd">
 <td>
 <p>
-<strong>element forceBeamColumn $eleTag $iNode $jNode $transfTag “IntegrationType arg1 arg2 …” &lt;-mass $massDens&gt; &lt;-iter $maxIters <span class="math inline">\(tol&amp;gt;&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;/tbody&gt; &lt;/table&gt; &lt;table&gt; &lt;tbody&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;eleTag&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;unique element object tag&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>iNode $jNode</strong>
+<strong>element forceBeamColumn $eleTag $iNode $jNode $transfTag “IntegrationType arg1 arg2 …” &lt;-mass $massDens&gt; &lt;-iter $maxIters $tol&gt;</strong>
+</p>
+</td>
+</tr>
+</tbody>
+</table>
+<table>
+<tbody>
+<tr class="odd">
+<td>
+<code class="parameter-table-variable">eleTag</code>
+</td>
+<td>
+<p>
+unique element object tag
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<p>
+<code class="parameter-table-variable">iNode jNode</code>
 </p>
 </td>
 <td>
