--- a/site/contrib/modeling/element/350-Joint2D Element/index.html
+++ b/site/contrib/modeling/element/350-Joint2D Element/index.html
@@ -13249,7 +13249,7 @@ unique element object tag
 <tr class="even">
 <td>
 <p>
-<strong>$Nd1 $Nd2 $Nd3 $Nd4</strong>
+<code class="parameter-table-variable">Nd1 Nd2 Nd3 Nd4</code>
 </p>
 </td>
 <td>
