--- a/site/contrib/modeling/element/354-KikuchiBearing Element/index.html
+++ b/site/contrib/modeling/element/354-KikuchiBearing Element/index.html
@@ -13236,7 +13236,211 @@ This command is used to construct a KikuchiBearing element object, which is defi
 <tr class="odd">
 <td>
 <p>
-<strong>element KikuchiBearing $eleTag $iNode $jNode -shape $shape -size $size $totalRubber &lt;-totalHeight $totalHeight&gt; -nMSS $nMSS -matMSS $matMSSTag &lt;-limDisp $limDisp&gt; -nMNS $nMNS -matMNS $matMNSTag &lt;-lambda <span class="math inline">\(lambda&amp;gt; &amp;lt;-orient &amp;lt;\)</span>x1 $x2 $x3&gt; $yp1 $yp2 $yp3&gt; &lt;-mass $m&gt; &lt;-noPDInput&gt; &lt;-noTilt&gt; &lt;-adjustPDOutput $ci $cj&gt; &lt;-doBalance $limFo $limFi <span class="math inline">\(nIter&amp;gt;&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;/tbody&gt; &lt;/table&gt; &lt;hr /&gt; &lt;table&gt; &lt;tbody&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;eleTag&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;unique element object tag&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>inode <span class="math inline">\(jnode&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;end nodes&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;shape&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;following shapes are available: &lt;strong&gt;round&lt;/strong&gt;, &lt;strong&gt;square&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;size&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;diameter (round shape), length of edge (square shape)&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;totalRubber&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;total rubber thickness&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;totalHeight&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;total height of the bearing (defaulut: distance between iNode and jNode)&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;nMSS&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;number of springs in MSS = nMSS&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;matMSSTag&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;matTag for MSS&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;limDisp&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;minimum deformation to calculate equivalent coefficient of MSS (see note 1)&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;nMNS&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;number of springs in MNS = nMNS*nMNS (for round and square shape)&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;matMNSTag&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;matTag for MNS&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;lambda&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;parameter to calculate compression modulus distribution on MNS (see note 2)&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>x1 $x2 <span class="math inline">\(x3&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;vector components in global coordinates defining local x-axis&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>yp1 $yp2 <span class="math inline">\(yp3&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;vector components in global coordinates defining vector yp which lies in the local x-y plane for the element&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;m&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;element mass&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;code class=&quot;parameter-table-flag&quot;&gt;-noPDInput&lt;/code&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;not consider P-Delta moment&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;code class=&quot;parameter-table-flag&quot;&gt;-noTilt&lt;/code&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;not consider tilt of rigid link&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>ci <span class="math inline">\(cj&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;P-Delta moment adjustment for reaction force (default: &lt;code class=&quot;tcl-variable&quot;&gt;ci&lt;/code&gt;=0.5, &lt;code class=&quot;tcl-variable&quot;&gt;cj&lt;/code&gt;=0.5)&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>limFo $limFi $nIter</strong>
+<strong>element KikuchiBearing $eleTag $iNode $jNode -shape $shape -size $size $totalRubber &lt;-totalHeight $totalHeight&gt; -nMSS $nMSS -matMSS $matMSSTag &lt;-limDisp $limDisp&gt; -nMNS $nMNS -matMNS $matMNSTag &lt;-lambda <span class="math inline">\(lambda&amp;gt; &amp;lt;-orient &amp;lt;\)</span>x1 $x2 $x3&gt; $yp1 $yp2 $yp3&gt; &lt;-mass $m&gt; &lt;-noPDInput&gt; &lt;-noTilt&gt; &lt;-adjustPDOutput $ci $cj&gt; &lt;-doBalance $limFo $limFi $nIter&gt;</strong>
+</p>
+</td>
+</tr>
+</tbody>
+</table>
+<hr />
+<table>
+<tbody>
+<tr class="odd">
+<td>
+<code class="parameter-table-variable">eleTag</code>
+</td>
+<td>
+<p>
+unique element object tag
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<p>
+<code class="parameter-table-variable">inode jnode</code>
+</p>
+</td>
+<td>
+<p>
+end nodes
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<code class="parameter-table-variable">shape</code>
+</td>
+<td>
+<p>
+following shapes are available: <strong>round</strong>, <strong>square</strong>
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<code class="parameter-table-variable">size</code>
+</td>
+<td>
+<p>
+diameter (round shape), length of edge (square shape)
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<code class="parameter-table-variable">totalRubber</code>
+</td>
+<td>
+<p>
+total rubber thickness
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<code class="parameter-table-variable">totalHeight</code>
+</td>
+<td>
+<p>
+total height of the bearing (defaulut: distance between iNode and jNode)
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<code class="parameter-table-variable">nMSS</code>
+</td>
+<td>
+<p>
+number of springs in MSS = nMSS
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<code class="parameter-table-variable">matMSSTag</code>
+</td>
+<td>
+<p>
+matTag for MSS
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<code class="parameter-table-variable">limDisp</code>
+</td>
+<td>
+<p>
+minimum deformation to calculate equivalent coefficient of MSS (see note 1)
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<code class="parameter-table-variable">nMNS</code>
+</td>
+<td>
+<p>
+number of springs in MNS = nMNS*nMNS (for round and square shape)
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<code class="parameter-table-variable">matMNSTag</code>
+</td>
+<td>
+<p>
+matTag for MNS
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<code class="parameter-table-variable">lambda</code>
+</td>
+<td>
+<p>
+parameter to calculate compression modulus distribution on MNS (see note 2)
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<p>
+<code class="parameter-table-variable">x1 x2 x3</code>
+</p>
+</td>
+<td>
+<p>
+vector components in global coordinates defining local x-axis
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<p>
+<code class="parameter-table-variable">yp1 yp2 yp3</code>
+</p>
+</td>
+<td>
+<p>
+vector components in global coordinates defining vector yp which lies in the local x-y plane for the element
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<code class="parameter-table-variable">m</code>
+</td>
+<td>
+<p>
+element mass
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<p>
+<code class="parameter-table-flag">-noPDInput</code>
+</p>
+</td>
+<td>
+<p>
+not consider P-Delta moment
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<p>
+<code class="parameter-table-flag">-noTilt</code>
+</p>
+</td>
+<td>
+<p>
+not consider tilt of rigid link
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<p>
+<code class="parameter-table-variable">ci cj</code>
+</p>
+</td>
+<td>
+<p>
+P-Delta moment adjustment for reaction force (default: <code class="tcl-variable">ci</code>=0.5, <code class="tcl-variable">cj</code>=0.5)
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<p>
+<code class="parameter-table-variable">limFo limFi nIter</code>
 </p>
 </td>
 <td>
