--- a/site/contrib/modeling/element/361-LeadRubberX/index.html
+++ b/site/contrib/modeling/element/361-LeadRubberX/index.html
@@ -13256,7 +13256,125 @@ unique element object tag
 <tr class="even">
 <td>
 <p>
-<strong>$Nd1 <span class="math inline">\(Nd2&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;end nodes&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;Fy&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;yield strength&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;alpha&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;post-yield stiffness ratio&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;Gr&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;shear modulus of elastomeric bearing&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;Kbulk&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;bulk modulus of rubber&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;D1&lt;/code&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;internal diameter&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;D2&lt;/code&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;outer diameter (excluding cover thickness)&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;ts&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;single steel shim layer thickness&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;tr&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;single rubber layer thickness&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;n&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;number of rubber layers&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>x1 $x2 <span class="math inline">\(x3&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;vector components in global coordinates defining local x-axis (optional)&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>y1 $y2 $y3</strong>
+<code class="parameter-table-variable">Nd1 Nd2</code>
+</p>
+</td>
+<td>
+<p>
+end nodes
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<code class="parameter-table-variable">Fy</code>
+</td>
+<td>
+<p>
+yield strength
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<code class="parameter-table-variable">alpha</code>
+</td>
+<td>
+<p>
+post-yield stiffness ratio
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<code class="parameter-table-variable">Gr</code>
+</td>
+<td>
+<p>
+shear modulus of elastomeric bearing
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<code class="parameter-table-variable">Kbulk</code>
+</td>
+<td>
+<p>
+bulk modulus of rubber
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<p>
+<code class="parameter-table-variable">D1</code>
+</p>
+</td>
+<td>
+<p>
+internal diameter
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<p>
+<code class="parameter-table-variable">D2</code>
+</p>
+</td>
+<td>
+<p>
+outer diameter (excluding cover thickness)
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<code class="parameter-table-variable">ts</code>
+</td>
+<td>
+<p>
+single steel shim layer thickness
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<code class="parameter-table-variable">tr</code>
+</td>
+<td>
+<p>
+single rubber layer thickness
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<code class="parameter-table-variable">n</code>
+</td>
+<td>
+<p>
+number of rubber layers
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<p>
+<code class="parameter-table-variable">x1 x2 x3</code>
+</p>
+</td>
+<td>
+<p>
+vector components in global coordinates defining local x-axis (optional)
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<p>
+<code class="parameter-table-variable">y1 y2 y3</code>
 </p>
 </td>
 <td>
