--- a/site/contrib/modeling/element/611-SFI MVLEM - Cyclic Shear-Flexure Interaction Model for RC Walls/index.html
+++ b/site/contrib/modeling/element/611-SFI MVLEM - Cyclic Shear-Flexure Interaction Model for RC Walls/index.html
@@ -13277,7 +13277,7 @@ Unique element object tag
 <tr class="even">
 <td>
 <p>
-<strong>$iNode $jNode</strong>
+<code class="parameter-table-variable">iNode jNode</code>
 </p>
 </td>
 <td>
