--- a/site/contrib/modeling/element/612-SSPbrickUP Element/index.html
+++ b/site/contrib/modeling/element/612-SSPbrickUP Element/index.html
@@ -13249,7 +13249,82 @@ unique integer tag identifying element object
 <tr class="even">
 <td>
 <p>
-<strong>$iNode $jNode $kNode $lNode $mNode $nNode $pNode <span class="math inline">\(qNode&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;the eight nodes defining the element, input in counterclockwise order (same node numbering scheme as for the &lt;a href=&quot;Brick_u-p_Element&quot; title=&quot;wikilink&quot;&gt; brickUP Element&lt;/a&gt;) (-ndm 3 -ndf 4)&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;matTag&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;unique integer tag associated with previously-defined nDMaterial object&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;fBulk&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;bulk modulus of the pore fluid&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;fDen&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;mass density of the pore fluid&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>k1 $k2 <span class="math inline">\(k3&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;permeability coefficients in global x-, y-, and z-directions, respectively&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;void&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;voids ratio&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;alpha&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;spatial pressure field stabilization parameter (see discussion below for more information)&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>b1 $b2 $b3</strong>
+<strong>$iNode $jNode $kNode $lNode $mNode $nNode $pNode $qNode</strong>
+</p>
+</td>
+<td>
+<p>
+the eight nodes defining the element, input in counterclockwise order (same node numbering scheme as for the <a href="Brick_u-p_Element"
+title="wikilink"> brickUP Element</a>) (-ndm 3 -ndf 4)
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<code class="parameter-table-variable">matTag</code>
+</td>
+<td>
+<p>
+unique integer tag associated with previously-defined nDMaterial object
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<code class="parameter-table-variable">fBulk</code>
+</td>
+<td>
+<p>
+bulk modulus of the pore fluid
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<code class="parameter-table-variable">fDen</code>
+</td>
+<td>
+<p>
+mass density of the pore fluid
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<p>
+<code class="parameter-table-variable">k1 k2 k3</code>
+</p>
+</td>
+<td>
+<p>
+permeability coefficients in global x-, y-, and z-directions, respectively
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<code class="parameter-table-variable">void</code>
+</td>
+<td>
+<p>
+voids ratio
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<code class="parameter-table-variable">alpha</code>
+</td>
+<td>
+<p>
+spatial pressure field stabilization parameter (see discussion below for more information)
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<p>
+<code class="parameter-table-variable">b1 b2 b3</code>
 </p>
 </td>
 <td>
