--- a/site/contrib/modeling/element/640-ShellNLDKGT/index.html
+++ b/site/contrib/modeling/element/640-ShellNLDKGT/index.html
@@ -13249,7 +13249,7 @@ unique element object tag
 <tr class="even">
 <td>
 <p>
-<strong>$iNode $jNode $kNode</strong>
+<code class="parameter-table-variable">iNode jNode kNode</code>
 </p>
 </td>
 <td>
