--- a/site/contrib/modeling/element/714-Triple Friction Pendulum Bearing Element/index.html
+++ b/site/contrib/modeling/element/714-Triple Friction Pendulum Bearing Element/index.html
@@ -13257,7 +13257,7 @@ unique element object tag
 <tr class="even">
 <td>
 <p>
-<strong>$iNode $jNode</strong>
+<code class="parameter-table-variable">iNode jNode</code>
 </p>
 </td>
 <td>
