--- a/site/contrib/modeling/element/715-Triple Friction Pendulum Element/index.html
+++ b/site/contrib/modeling/element/715-Triple Friction Pendulum Element/index.html
@@ -13276,7 +13276,19 @@ In the vertical direction, the element is multi-linear elastic with different st
 <tr class="even">
 <td>
 <p>
-<strong>$iNode <span class="math inline">\(jNode&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;= end nodes&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>frnTag1, $frnTag2, <span class="math inline">\(frnTag2&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;= tags associated with previously-defined &lt;a href=&quot;http://opensees.berkeley.edu/wiki/index.php/FrictionModel_Command&quot;&gt;FrictionModels&lt;/a&gt; at the three sliding interfaces&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;vertMatTag&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;= Pre-defined material tag for COMPRESSION behavior of the bearing&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>rotZMatTag, $rotXMatTag, <span class="math inline">\(rotYMatTag&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;= Pre-defined material tags for rotational behavior about 3-axis, 1-axis and 2-axis, respectively.&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>L1, $L2, <span class="math inline">\(L3&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;= effective radii. Li = R_i - h_i (see Figure 1)&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>d1, $d2, <span class="math inline">\(d3&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;= displacement limits of pendulums (Figure 1). Displacement limit of the bearing is 2\)</span>d1+<span class="math inline">\(d2+\)</span>d3+<span class="math inline">\(L1.\)</span>d3/<span class="math inline">\(L3-\)</span>L1.<span class="math inline">\(d2/\)</span>L2
+<code class="parameter-table-variable">iNode jNode</code>
+</p>
+</td>
+<td>
+<p>
+= end nodes
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<p>
+<strong>$frnTag1, $frnTag2, <span class="math inline">\(frnTag2&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;= tags associated with previously-defined &lt;a href=&quot;http://opensees.berkeley.edu/wiki/index.php/FrictionModel_Command&quot;&gt;FrictionModels&lt;/a&gt; at the three sliding interfaces&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;vertMatTag&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;= Pre-defined material tag for COMPRESSION behavior of the bearing&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>rotZMatTag, $rotXMatTag, <span class="math inline">\(rotYMatTag&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;= Pre-defined material tags for rotational behavior about 3-axis, 1-axis and 2-axis, respectively.&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>L1, $L2, <span class="math inline">\(L3&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;= effective radii. Li = R_i - h_i (see Figure 1)&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>d1, $d2, <span class="math inline">\(d3&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;= displacement limits of pendulums (Figure 1). Displacement limit of the bearing is 2\)</span>d1+<span class="math inline">\(d2+\)</span>d3+<span class="math inline">\(L1.\)</span>d3/<span class="math inline">\(L3-\)</span>L1.<span class="math inline">\(d2/\)</span>L2
 </p>
 </td>
 </tr>
