--- a/site/contrib/modeling/element/74-CatenaryCableElement/index.html
+++ b/site/contrib/modeling/element/74-CatenaryCableElement/index.html
@@ -13250,7 +13250,102 @@ unique element object tag
 <tr class="even">
 <td>
 <p>
-<strong>$iNode <span class="math inline">\(jNode&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;end nodes (3 dof per node)&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;E&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;elastic modulus of the cable material&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;A&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;cross-sectional area of element&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;L0&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;unstretched length of the cable&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;alpha&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;coefficient of thermal expansion&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;temperature_change&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;temperature change for the element&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;rho&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;mass per unit length&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;errortol&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;allowed tolerance for within-element equilbrium (Newton-Rhapson iterations)&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;Nsubsteps&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;number of within-element substeps into which equilibrium iterations are subdivided (not number of steps to convergence)&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;massType&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;Mass matrix model to use (&lt;strong&gt;\)</span>massType = 0</strong> lumped mass matrix, <strong>$massType = 1</strong> rigid-body mass matrix (in development))
+<code class="parameter-table-variable">iNode jNode</code>
+</p>
+</td>
+<td>
+<p>
+end nodes (3 dof per node)
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<code class="parameter-table-variable">E</code>
+</td>
+<td>
+<p>
+elastic modulus of the cable material
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<code class="parameter-table-variable">A</code>
+</td>
+<td>
+<p>
+cross-sectional area of element
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<code class="parameter-table-variable">L0</code>
+</td>
+<td>
+<p>
+unstretched length of the cable
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<code class="parameter-table-variable">alpha</code>
+</td>
+<td>
+<p>
+coefficient of thermal expansion
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<code class="parameter-table-variable">temperature_change</code>
+</td>
+<td>
+<p>
+temperature change for the element
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<code class="parameter-table-variable">rho</code>
+</td>
+<td>
+<p>
+mass per unit length
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<code class="parameter-table-variable">errortol</code>
+</td>
+<td>
+<p>
+allowed tolerance for within-element equilbrium (Newton-Rhapson iterations)
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<code class="parameter-table-variable">Nsubsteps</code>
+</td>
+<td>
+<p>
+number of within-element substeps into which equilibrium iterations are subdivided (not number of steps to convergence)
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<code class="parameter-table-variable">massType</code>
+</td>
+<td>
+<p>
+Mass matrix model to use (<strong><span class="math inline">\(massType = 0&lt;/strong&gt; lumped mass matrix, &lt;strong&gt;\)</span>massType = 1</strong> rigid-body mass matrix (in development))
 </p>
 </td>
 </tr>
