--- a/site/contrib/modeling/element/757-YamamotoBiaxialHDR Element/index.html
+++ b/site/contrib/modeling/element/757-YamamotoBiaxialHDR Element/index.html
@@ -13250,7 +13250,77 @@ unique element object tag
 <tr class="even">
 <td>
 <p>
-<strong>$inode <span class="math inline">\(jnode&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;end nodes&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;Tp&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;compound type&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;= &lt;strong&gt;1&lt;/strong&gt; : X0.6R manufactured by Bridgestone corporation.&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;DDo&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;outer diameter [m]&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;DDi&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;bore diameter [m]&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;Hr&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;total thickness of rubber layer [m]&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;p&gt;Optional Data&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>cr $cs</strong>
+<code class="parameter-table-variable">inode jnode</code>
+</p>
+</td>
+<td>
+<p>
+end nodes
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<code class="parameter-table-variable">Tp</code>
+</td>
+<td>
+<p>
+compound type
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+</td>
+<td>
+<p>
+= <strong>1</strong> : X0.6R manufactured by Bridgestone corporation.
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<code class="parameter-table-variable">DDo</code>
+</td>
+<td>
+<p>
+outer diameter [m]
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<code class="parameter-table-variable">DDi</code>
+</td>
+<td>
+<p>
+bore diameter [m]
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<code class="parameter-table-variable">Hr</code>
+</td>
+<td>
+<p>
+total thickness of rubber layer [m]
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<p>
+Optional Data
+</p>
+</td>
+<td>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<p>
+<code class="parameter-table-variable">cr cs</code>
 </p>
 </td>
 <td>
@@ -13262,7 +13332,19 @@ coefficients for shear stress components of <span class="math inline">\(\tau_{r}
 <tr class="even">
 <td>
 <p>
-<strong>$x1 $x2 <span class="math inline">\(x3&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;vector components in global coordinates defining local x-axis&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>yp1 $yp2 $yp3</strong>
+<code class="parameter-table-variable">x1 x2 x3</code>
+</p>
+</td>
+<td>
+<p>
+vector components in global coordinates defining local x-axis
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<p>
+<code class="parameter-table-variable">yp1 yp2 yp3</code>
 </p>
 </td>
 <td>
