--- a/site/contrib/modeling/element/764-ZeroLengthInterface2D/index.html
+++ b/site/contrib/modeling/element/764-ZeroLengthInterface2D/index.html
@@ -13270,7 +13270,19 @@ Number of Retained nodes
 <tr class="even">
 <td>
 <p>
-<strong>$cdof <span class="math inline">\(rdof&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;Constrained and Retained degree of freedom&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>Nodes …</strong>
+<code class="parameter-table-variable">cdof rdof</code>
+</p>
+</td>
+<td>
+<p>
+Constrained and Retained degree of freedom
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<p>
+<strong>$Nodes …</strong>
 </p>
 </td>
 <td>
