--- a/site/contrib/modeling/element/768-ZeroLengthSection Element/index.html
+++ b/site/contrib/modeling/element/768-ZeroLengthSection Element/index.html
@@ -13250,7 +13250,41 @@ unique element object tag
 <tr class="even">
 <td>
 <p>
-<strong>$iNode <span class="math inline">\(jNode&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;end nodes&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;secTag&lt;/code&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;tag associated with previously-defined Section object&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>x1 $x2 <span class="math inline">\(x3&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;vector components in global coordinates defining local x-axis (optional)&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>yp1 $yp2 $yp3</strong>
+<code class="parameter-table-variable">iNode jNode</code>
+</p>
+</td>
+<td>
+<p>
+end nodes
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<code class="parameter-table-variable">secTag</code>
+</td>
+<td>
+<p>
+tag associated with previously-defined Section object
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<p>
+<code class="parameter-table-variable">x1 x2 x3</code>
+</p>
+</td>
+<td>
+<p>
+vector components in global coordinates defining local x-axis (optional)
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<p>
+<code class="parameter-table-variable">yp1 yp2 yp3</code>
 </p>
 </td>
 <td>
