--- a/site/contrib/modeling/geomTransf/480-PDelta Transformation/index.html
+++ b/site/contrib/modeling/geomTransf/480-PDelta Transformation/index.html
@@ -13256,7 +13256,7 @@ integer tag identifying transformation
 <tr class="even">
 <td>
 <p>
-<strong>$vecxzX $vecxzY $vecxzZ</strong>
+<code class="parameter-table-variable">vecxzX vecxzY vecxzZ</code>
 </p>
 </td>
 <td>
@@ -13274,7 +13274,7 @@ These items need to be specified for the three-dimensional problem.
 <tr class="odd">
 <td>
 <p>
-<strong>dXi dYi dZi</strong>
+<code>dXi dYi dZi</code>
 </p>
 </td>
 <td>
@@ -13286,7 +13286,7 @@ joint offset values – offsets specified with respect to the global coordinate 
 <tr class="even">
 <td>
 <p>
-<strong>dXj dYj dZj</strong>
+<code>dXj dYj dZj</code>
 </p>
 </td>
 <td>
