--- a/site/contrib/modeling/ndmaterial/160-Drucker Prager/index.html
+++ b/site/contrib/modeling/ndmaterial/160-Drucker Prager/index.html
@@ -13373,7 +13373,7 @@ mass density of the material
 <tr class="even">
 <td>
 <p>
-<strong>&lt;$atmPressure&gt;</strong>
+<code>atmPressure</code>
 </p>
 </td>
 <td>
