--- a/site/contrib/modeling/uniaxialMaterial/27-AxialSp Material/index.html
+++ b/site/contrib/modeling/uniaxialMaterial/27-AxialSp Material/index.html
@@ -13258,7 +13258,19 @@ compressive modulus
 <tr class="odd">
 <td>
 <p>
-<strong>$fty <span class="math inline">\(fcy&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;yield stress under tension (&lt;code class=&quot;tcl-variable&quot;&gt;fty&lt;/code&gt;) and compression (&lt;code class=&quot;tcl-variable&quot;&gt;fcy&lt;/code&gt;) (see note 1)&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>bte $bty $bcy</strong>
+<code class="parameter-table-variable">fty fcy</code>
+</p>
+</td>
+<td>
+<p>
+yield stress under tension (<code class="tcl-variable">fty</code>) and compression (<code class="tcl-variable">fcy</code>) (see note 1)
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<p>
+<code class="parameter-table-variable">bte bty bcy</code>
 </p>
 </td>
 <td>
