--- a/site/contrib/modeling/uniaxialMaterial/33-BWBN Material/index.html
+++ b/site/contrib/modeling/uniaxialMaterial/33-BWBN Material/index.html
@@ -13279,7 +13279,7 @@ parameter that controls transition from linear to nonlinear range (as n increase
 <tr class="odd">
 <td>
 <p>
-<strong>$gamma $beta</strong>
+<code class="parameter-table-variable">gamma beta</code>
 </p>
 </td>
 <td>
@@ -13302,7 +13302,7 @@ parameter that controls tangent stiffness
 <tr class="odd">
 <td>
 <p>
-<strong>$q $zetas $p $Shi $deltaShi $lambda</strong>
+<code class="parameter-table-variable">q zetas p Shi deltaShi lambda</code>
 </p>
 </td>
 <td>
