--- a/site/contrib/modeling/uniaxialMaterial/404-MultiLinear Material/index.html
+++ b/site/contrib/modeling/uniaxialMaterial/404-MultiLinear Material/index.html
@@ -13249,7 +13249,43 @@ integer tag identifying material
 <tr class="even">
 <td>
 <p>
-<strong>$u1 <span class="math inline">\(f1&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;strain and stress (or deformation &amp;amp; force) at first point of the envelope&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>u2 <span class="math inline">\(f2&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;strain and stress (or deformation &amp;amp; force) at second point of the envelope&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>u3 <span class="math inline">\(f3&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;strain and stress (or deformation &amp;amp; force) at third point of the envelope&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>u4 $f4</strong>
+<code class="parameter-table-variable">u1 f1</code>
+</p>
+</td>
+<td>
+<p>
+strain and stress (or deformation &amp; force) at first point of the envelope
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<p>
+<code class="parameter-table-variable">u2 f2</code>
+</p>
+</td>
+<td>
+<p>
+strain and stress (or deformation &amp; force) at second point of the envelope
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<p>
+<code class="parameter-table-variable">u3 f3</code>
+</p>
+</td>
+<td>
+<p>
+strain and stress (or deformation &amp; force) at third point of the envelope
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<p>
+<code class="parameter-table-variable">u4 f4</code>
 </p>
 </td>
 <td>
