--- a/site/contrib/modeling/uniaxialMaterial/64-BoucWen Material/index.html
+++ b/site/contrib/modeling/uniaxialMaterial/64-BoucWen Material/index.html
@@ -13279,7 +13279,7 @@ parameter that controls transition from linear to nonlinear range (as n increase
 <tr class="odd">
 <td>
 <p>
-<strong>$gamma $beta</strong>
+<code class="parameter-table-variable">gamma beta</code>
 </p>
 </td>
 <td>
@@ -13291,7 +13291,19 @@ parameters that control shape of hysteresis loop; depending on the values of <sp
 <tr class="even">
 <td>
 <p>
-<strong>$Ao <span class="math inline">\(deltaA&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;parameters that control tangent stiffness&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>deltaNu $deltaEta</strong>
+<code class="parameter-table-variable">Ao deltaA</code>
+</p>
+</td>
+<td>
+<p>
+parameters that control tangent stiffness
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<p>
+<code class="parameter-table-variable">deltaNu deltaEta</code>
 </p>
 </td>
 <td>
