--- a/site/contrib/modeling/uniaxialMaterial/722-TzLiq1 Material/index.html
+++ b/site/contrib/modeling/uniaxialMaterial/722-TzLiq1 Material/index.html
@@ -13299,7 +13299,7 @@ The viscous damping term (dashpot) on the far-field (elastic) component of the d
 <tr class="even">
 <td>
 <p>
-<strong>$ele1 $ele2</strong>
+<code class="parameter-table-variable">ele1 ele2</code>
 </p>
 </td>
 <td>
