--- a/site/contrib/recorders/517-Plot Recorder/index.html
+++ b/site/contrib/recorders/517-Plot Recorder/index.html
@@ -13262,7 +13262,12 @@ title of window to be opened
 <tr class="odd">
 <td>
 <p>
-<strong>$xLoc <span class="math inline">\(yLoc&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;\)</span>xLoc, <span class="math inline">\(yLoc specifies location on screen of top left corner of window&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>xPixels <span class="math inline">\(yPixels&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;\)</span>xPixels, <span class="math inline">\(yPixels specifies width and height in pixels of window to open&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>xCol $yCol …</strong>
+<code class="parameter-table-variable">xLoc yLoc</code>
+</p>
+</td>
+<td>
+<p>
+$xLoc, <span class="math inline">\(yLoc specifies location on screen of top left corner of window&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;code class=&quot;parameter-table-variable&quot;&gt;xPixels yPixels&lt;/code&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;\)</span>xPixels, <span class="math inline">\(yPixels specifies width and height in pixels of window to open&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>xCol $yCol …</strong>
 </p>
 </td>
 <td>
