--- a/site/contrib/sensitivity/151-DispBeamColumnWithSensitivity Command.html
+++ b/site/contrib/sensitivity/151-DispBeamColumnWithSensitivity Command.html
@@ -22,7 +22,7 @@ element dispBeamColumnWithSensitivity $eleTag $iNode
 <td><p>integer tag identifying an existing parameter.</p></td>
 </tr>
 <tr class="even">
-<td><p><strong>$iNode $jNode</strong></p></td>
+<td><p><code class="parameter-table-variable">iNode jNode</code></p></td>
 <td><p>end nodes.</p></td>
 </tr>
 <tr class="odd">
