--- a/site/contrib/sensitivity/559-QuadWithSensitivity.html
+++ b/site/contrib/sensitivity/559-QuadWithSensitivity.html
@@ -22,7 +22,7 @@ element quadWithSensitivity $eleTag $iNode $jNode $kNode
 <td><p>integer tag identifying an existing parameter.</p></td>
 </tr>
 <tr class="even">
-<td><p><strong>$iNode $jnode $kNode $lNode</strong></p></td>
+<td><p><code class="parameter-table-variable">iNode jnode kNode lNode</code></p></td>
 <td><p>four nodes defining element boundaries (numbered following a
 counter-clockwise order around the element).</p></td>
 </tr>
@@ -53,7 +53,7 @@ sensitivity analysis).</p></td>
 element mass matrix is computed (optional, default=0.0).</p></td>
 </tr>
 <tr class="even">
-<td><p><strong>$b1 $b2</strong></p></td>
+<td><p><code class="parameter-table-variable">b1 b2</code></p></td>
 <td><p>constant body forces defined in the isoparametric domain
 (optional, default=0.0).</p></td>
 </tr>
