--- a/site/libraries/numerics/LinearSolve/110-Cusp/index.html
+++ b/site/libraries/numerics/LinearSolve/110-Cusp/index.html
@@ -13277,7 +13277,19 @@ href="http://opensees.berkeley.edu/OpenSees/code/cusp/64/CuSPSolver.dll%22%3E">h
 <tr class="odd">
 <td>
 <p>
-<strong><span class="math inline">\(RTOL&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;Set the relative tolerance.&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>MINT</strong>
+<code class="parameter-table-variable">RTOL</code>
+</p>
+</td>
+<td>
+<p>
+Set the relative tolerance.
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<p>
+<code class="parameter-table-variable">MINT</code>
 </p>
 </td>
 <td>
@@ -13289,7 +13301,19 @@ Set the maximum number of iterations.
 <tr class="odd">
 <td>
 <p>
-<strong><span class="math inline">\(PRE&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;Set the preconditioner. can be none, diagonal, and ainv&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;even&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>SOLVER</strong>
+<code class="parameter-table-variable">PRE</code>
+</p>
+</td>
+<td>
+<p>
+Set the preconditioner. can be none, diagonal, and ainv
+</p>
+</td>
+</tr>
+<tr class="even">
+<td>
+<p>
+<code class="parameter-table-variable">SOLVER</code>
 </p>
 </td>
 <td>
